--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -4,12 +4,12 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "start": "node backend/index.js",
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview",
-    "server": "json-server --port 3001 db.json",
-    "start": "node backend/index.js"
+    "lint": "eslint .",
+    "server": "json-server --port 3001 db.json"
   },
   "dependencies": {
     "axios": "^1.8.1",
