--- a/part3/phonebook/.gitignore
+++ b/part3/phonebook/.gitignore
@@ -1,18 +1,14 @@
-# Logs
-logs
-*.log
+# dependencies
+node_modules
+
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
+# editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -22,3 +18,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# environment variables
+.env
