--- a/part3/phonebook/render.yaml
+++ b/part3/phonebook/render.yaml
@@ -2,9 +2,7 @@ services:
   - type: web
     name: phonebook
     env: node
-    buildCommand: |
-      npm install
-      npm run build
+    buildCommand: npm install && npm run build
     startCommand: npm start
     staticPublishPath: ./dist
     envVars:
