--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -9,7 +9,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint .",
-    "server": "json-server --port 3001 db.json"
+    "server": "json-server --port 3001 db.json",
+    "build:ui": "if exist dist rmdir /s /q dist && npm run build",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
   "dependencies": {
     "axios": "^1.8.1",
