--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -15,7 +15,10 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mongoose": "^8.12.2",
     "morgan": "^1.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
