--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node backend/index.js",
-    "dev": "vite",
+    "dev": "nodemon backend/index.js",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint .",
