--- a/part4/blog-list/.env
+++ b/part4/blog-list/.env
@@ -1,3 +1,4 @@
 MONGODB_URI=mongodb+srv://rimRasen:BwC5bJ62EgwKwEM3@nodeexpressprojects.umpshdn.mongodb.net/fullstackopen?retryWrites=true&w=majority
 PORT=3001
 MONGODB_PASSWORD="BwC5bJ62EgwKwEM3"
+TEST_MONGODB_URI=mongodb+srv://rimRasen:BwC5bJ62EgwKwEM3@nodeexpressprojects.umpshdn.mongodb.net/fullstackopen-test?retryWrites=true&w=majority
