--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -4,10 +4,10 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "node --test",
+        "test": "cross-env NODE_ENV=test node --test",
         "test-watch": "node --test --watch",
-        "dev": "nodemon index.js",
-        "start": "node index.js",
+        "dev": "cross-env NODE_ENV=development node --watch index.js",
+        "start": "cross-env NODE_ENV=production node index.js",
         "deploy": "cd ../.. && git add . && git commit -m \"Update blog-list\" && git push origin master"
     },
     "keywords": [],
@@ -15,9 +15,14 @@
     "license": "ISC",
     "dependencies": {
         "cors": "^2.8.5",
+        "cross-env": "^7.0.3",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "express-async-errors": "^3.1.1",
         "lodash": "^4.17.21",
         "mongoose": "^8.13.1"
+    },
+    "devDependencies": {
+        "supertest": "^7.1.1"
     }
 }
