--- a/part4/blog-list/.env
+++ b/part4/blog-list/.env
@@ -2,3 +2,5 @@ MONGODB_URI=mongodb+srv://rimRasen:BwC5bJ62EgwKwEM3@nodeexpressprojects.umpshdn.
 PORT=3001
 MONGODB_PASSWORD="BwC5bJ62EgwKwEM3"
 TEST_MONGODB_URI=mongodb+srv://rimRasen:BwC5bJ62EgwKwEM3@nodeexpressprojects.umpshdn.mongodb.net/fullstackopen-test?retryWrites=true&w=majority
+SECRET = "RimRasen"
+JWT_EXPIRATION = "1d"
